[gd_scene load_steps=6 format=3 uid="uid://bxm8k7n2p3qr4"]

[ext_resource type="Script" path="res://scenes/results.gd" id="1_results"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.2, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.3, 0.4, 0.6, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.2, 0.3, 0.5, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.5, 0.7, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.3, 0.5, 0.8, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 0.9, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4"]
bg_color = Color(0.2, 0.4, 0.7, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.5, 0.8, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Results" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_results")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="ResultsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 100.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="ResultsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_font_sizes/font_size = 48
text = "üèÜ Game Results"
horizontal_alignment = 1

[node name="WinnerPanel" type="Panel" parent="ResultsContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="WinnerContainer" type="VBoxContainer" parent="ResultsContainer/WinnerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 20.0
offset_right = -30.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="WinnerLabel" type="Label" parent="ResultsContainer/WinnerPanel/WinnerContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.3, 1)
theme_override_font_sizes/font_size = 36
text = "ü•á Winner: Player1"
horizontal_alignment = 1

[node name="WinnerScore" type="Label" parent="ResultsContainer/WinnerPanel/WinnerContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Final Score: 15"
horizontal_alignment = 1

[node name="ScoreboardPanel" type="Panel" parent="ResultsContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="ScoreboardContainer" type="VBoxContainer" parent="ResultsContainer/ScoreboardPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 20.0
offset_right = -30.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="ScoreboardTitle" type="Label" parent="ResultsContainer/ScoreboardPanel/ScoreboardContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_font_sizes/font_size = 28
text = "üìä Final Scoreboard"
horizontal_alignment = 1

[node name="ScoreList" type="ItemList" parent="ResultsContainer/ScoreboardPanel/ScoreboardContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_font_sizes/font_size = 20

[node name="ButtonContainer" type="HBoxContainer" parent="ResultsContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="BackToLobbyButton" type="Button" parent="ResultsContainer/ButtonContainer"]
visible = false
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/pressed = SubResource("StyleBoxFlat_4")
theme_override_styles/normal = SubResource("StyleBoxFlat_3")
text = "üè† Back to Lobby"

[node name="MainMenuButton" type="Button" parent="ResultsContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/pressed = SubResource("StyleBoxFlat_4")
theme_override_styles/normal = SubResource("StyleBoxFlat_3")
text = "üè† Main Menu"

[connection signal="pressed" from="ResultsContainer/ButtonContainer/BackToLobbyButton" to="." method="_on_back_to_lobby_button_pressed"]
[connection signal="pressed" from="ResultsContainer/ButtonContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"] 